--- a/django/rhio/moves/OdometryCalibration/values.conf
+++ b/django/rhio/moves/OdometryCalibration/values.conf
@@ -1,7 +1,7 @@
 [bool] autoEnable.value = 1
 [bool] autoEnable.comment = Enable random walk exploration
 [int] autoNbCycles.value = 40
-[int] autoNbCycles.comment = Number of cycles since beginning of random exploration
+[int] autoNbCycles.comment = Number of cycles when doing random exploration
 [float] autoInertia.value = 0
 [float] autoInertia.comment = 
 [float] autoLateralDelta.value = 0.01
