--- a/django/rhio/moves/approach/values.conf
+++ b/django/rhio/moves/approach/values.conf
@@ -1,5 +1,3 @@
-[bool] chooseFoot.value = 1
-[bool] chooseFoot.comment = 
 [bool] enableLateralKick.value = 1
 [bool] enableLateralKick.comment = Enable the lateral kicks
 [bool] idiot.value = 0
@@ -10,12 +8,16 @@
 [float] centeringCorner.comment = 
 [float] farAlignerP.value = 0.2
 [float] farAlignerP.comment = 
+[float] kickGain.value = 1
+[float] kickGain.comment = IncreaseRate when ball is kickable (score increases by elapsed * kick_gain)
 [float] lateralKickTreshold.value = 60
 [float] lateralKickTreshold.comment = Choose the range where we will do lateral kick
 [float] nearAlignerP.value = 0.2
 [float] nearAlignerP.comment = 
 [float] nearLateralP.value = 0.5
 [float] nearLateralP.comment = 
+[float] noKickGain.value = 0.5
+[float] noKickGain.comment = DecreaseRate when ball is not kickable (score decreases by elapsed * no_kick_gain)
 [float] placementMargin.value = 8
 [float] placementMargin.comment = Distance (cm) to the target to enter rotate
 [float] radius.value = 30
@@ -28,11 +30,3 @@
 [float] shootInterval.comment = 
 [float] stepP.value = 1
 [float] stepP.comment = 
-[float] targetX.value = 6
-[float] targetX.comment = 
-[float] targetY.value = 13
-[float] targetY.comment = 
-[float] xRange.value = 10
-[float] xRange.comment = 
-[float] yRange.value = 6
-[float] yRange.comment = 
