--- a/django/rhio/moves/placer/values.conf
+++ b/django/rhio/moves/placer/values.conf
@@ -1,3 +1,5 @@
+[bool] avoidOpponents.value = 1
+[bool] avoidOpponents.comment = Avoid the opponents?
 [bool] directMode.value = 1
 [bool] directMode.comment = Turning to target before walking target
 [float] hysteresis.value = 1.5
@@ -10,14 +12,8 @@
 [float] marginX.comment = 
 [float] marginY.value = 50
 [float] marginY.comment = 
-[float] maxBwdStep.value = 20
-[float] maxBwdStep.comment = 
-[float] maxFwdStep.value = 40
-[float] maxFwdStep.comment = 
-[float] maxLateral.value = 10
-[float] maxLateral.comment = 
-[float] maxTurn.value = 10
-[float] maxTurn.comment = 
+[float] pathTargetDist.value = 70
+[float] pathTargetDist.comment = 
 [float] rushHysteresisHigh.value = 30
 [float] rushHysteresisHigh.comment = Rush stop being allowed above this threshold
 [float] rushHysteresisLow.value = 20
