--- a/django/rhio/moves/playing/values.conf
+++ b/django/rhio/moves/playing/values.conf
@@ -1,6 +1,14 @@
+[bool] teamConfidence.value = 1
+[bool] teamConfidence.comment = Am I confident in my team?
 [bool] useKickController.value = 1
 [bool] useKickController.comment = Use the kick controller
+[float] avoidRadius.value = 100
+[float] avoidRadius.comment = Radius (cm) to avoid colliding the ball while placing
 [float] localizeWalkDuration.value = 10
 [float] localizeWalkDuration.comment = Walk forward during this duration
-[str] approachMove.value = approach_potential
-[str] approachMove.comment = Approach move to use
+[float] perpendicularBallDistance.value = 80
+[float] perpendicularBallDistance.comment = Distance (cm) on the perpendicular to attack placement
+[float] placingBallDistance.value = 200
+[float] placingBallDistance.comment = Distance (cm) to the ball for team play placement
+[float] walkBallDistance.value = 120
+[float] walkBallDistance.comment = Distance to run the approach to the ball
