--- a/tom/rhio/moves/walk/values.conf
+++ b/tom/rhio/moves/walk/values.conf
@@ -6,15 +6,25 @@
 [float] P_stepXOffset.comment = P factor on trunkXOffset related to step
 [float] P_stepXOffset_back.value = 0.0005
 [float] P_stepXOffset_back.comment = P factor on trunkXOffset related to step (backward)
-[float] armsRoll.value = 18
+[float] armsPitch.value = 0
+[float] armsPitch.comment = 
+[float] armsRoll.value = -4
 [float] armsRoll.comment = 
 [float] compensateRoll.value = -3.6
 [float] compensateRoll.comment = 
 [float] cooldown.value = 1
 [float] cooldown.comment = Cooldown duration
-[float] footYOffset.value = 0.035
+[float] elbowOffset.value = -175
+[float] elbowOffset.comment = 
+[float] footApexPhase.value = 0.5
+[float] footApexPhase.comment = 
+[float] footOvershootPhase.value = 0.85
+[float] footOvershootPhase.comment = 
+[float] footOvershootRatio.value = 0.05
+[float] footOvershootRatio.comment = 
+[float] footYOffset.value = 0.03
 [float] footYOffset.comment = Front Y offset
-[float] freq.value = 1.6
+[float] freq.value = 1.55
 [float] freq.comment = Walk frequency
 [float] lateralTrim.value = 0
 [float] lateralTrim.comment = 
@@ -22,7 +32,7 @@
 [float] maxDLatByCycle.comment = For noSmoothing mode [mm]
 [float] maxDStepByCycle.value = 10
 [float] maxDStepByCycle.comment = For noSmoothing mode [mm]
-[float] maxDTurnByCycle.value = 3
+[float] maxDTurnByCycle.value = 4
 [float] maxDTurnByCycle.comment = For noSmoothing mode [deg]
 [float] maxLateral.value = 30
 [float] maxLateral.comment = 
@@ -32,12 +42,8 @@
 [float] maxStep.comment = 
 [float] maxStepBackward.value = 20
 [float] maxStepBackward.comment = 
-[float] riseDownVel.value = 5
-[float] riseDownVel.comment = Rise down velocity
 [float] riseGain.value = 0.04
 [float] riseGain.comment = Rise gain
-[float] riseUpVel.value = 5
-[float] riseUpVel.comment = Rise up velocity
 [float] securityPhase.value = 0.6
 [float] securityPhase.comment = 
 [float] securityTreshold.value = 0.08
@@ -52,30 +58,20 @@
 [float] smoothTransition.comment = Smoothing factor when changing parameters
 [float] startPhase.value = 0.1
 [float] startPhase.comment = Start phase
-[float] stepDownVel.value = 5
-[float] stepDownVel.comment = Step down velocity
-[float] stepTrim.value = -10
+[float] stepTrim.value = 0
 [float] stepTrim.comment = 
-[float] stepUpVel.value = 5
-[float] stepUpVel.comment = Step up velocity
 [float] supportPhaseRatio.value = 0
 [float] supportPhaseRatio.comment = Support phase ratio
-[float] swingGain.value = 0.03
+[float] swingGain.value = 0.04
 [float] swingGain.comment = Swing gain
 [float] swingPause.value = 0
 [float] swingPause.comment = Swing pause
-[float] swingPhase.value = 0.15
+[float] swingPhase.value = 0.6
 [float] swingPhase.comment = Swing phase
-[float] swingRollGain.value = 0
-[float] swingRollGain.comment = Swing roll gain
-[float] swingVel.value = 4
-[float] swingVel.comment = Swing velocity
 [float] trunkPitch_backward.value = 10
 [float] trunkPitch_backward.comment = Trunk Pitch
 [float] trunkPitch_forward.value = 10
 [float] trunkPitch_forward.comment = Trunk Pitch
-[float] trunkRoll.value = 0
-[float] trunkRoll.comment = Roll of the trunk
 [float] trunkXOffset_backward.value = 0.01
 [float] trunkXOffset_backward.comment = Trunk X offset
 [float] trunkXOffset_forward.value = 0.01
