--- a/arya/rhio/moves/approach_potential/values.conf
+++ b/arya/rhio/moves/approach_potential/values.conf
@@ -6,7 +6,11 @@
 [float] degsPerMeter.comment = 
 [float] distanceThreshold.value = 0.1
 [float] distanceThreshold.comment = 
-[float] rotationP.value = 30
+[float] kickGain.value = 2
+[float] kickGain.comment = IncreaseRate when ball is kickable (score increases by elapsed * kick_gain)
+[float] noKickGain.value = 0.5
+[float] noKickGain.comment = DecreaseRate when ball is not kickable (score decreases by elapsed * no_kick_gain)
+[float] rotationP.value = 20
 [float] rotationP.comment = 
 [float] stepP.value = 1
 [float] stepP.comment = 
