Tuning mowgly walk and shoot

--- a/mowgly/rhio/moves/approach_potential/values.conf
+++ b/mowgly/rhio/moves/approach_potential/values.conf
@@ -6,11 +6,15 @@
 [float] degsPerMeter.comment = 
 [float] distanceThreshold.value = 0.065
 [float] distanceThreshold.comment = 
+[float] kickGain.value = 2
+[float] kickGain.comment = IncreaseRate when ball is kickable (score increases by elapsed * kick_gain)
+[float] noKickGain.value = 0.5
+[float] noKickGain.comment = DecreaseRate when ball is not kickable (score decreases by elapsed * no_kick_gain)
 [float] rotationP.value = 10
 [float] rotationP.comment = 
 [float] stepP.value = 1
 [float] stepP.comment = 
-[float] stepPunch.value = 0
+[float] stepPunch.value = 8
 [float] stepPunch.comment = 
 [float] targetX.value = 0.1
 [float] targetX.comment = 
