--- a/arya/rhio/moves/head/values.conf
+++ b/arya/rhio/moves/head/values.conf
@@ -26,13 +26,23 @@
 [float] maxSpeed.comment = Maximal angular speed [deg/s]
 [float] maxTilt.value = 90
 [float] maxTilt.comment = Maximum tilt wished for an image point
+[float] maxTiltTrack.value = 85
+[float] maxTiltTrack.comment = Maximum tilt wished for the center of the image when tracking
 [float] minOverlap.value = 15
 [float] minOverlap.comment = Minimal overlap between control points [degrees]
 [float] minTilt.value = -8
 [float] minTilt.comment = Minimum tilt wished for an image point
+[float] nearTrackDist.value = 0.7
+[float] nearTrackDist.comment = Distance at which tracking becomes longer
+[float] nearTrackingPeriod.value = 2
+[float] nearTrackingPeriod.comment = Duration of tracking when ball_dist < nearTrackDist [s]
 [float] scanExtraPeriod.value = 0.5
 [float] scanExtraPeriod.comment = Extra time to ensure we are looking everywhere [s]
 [float] smoothing.value = 0.9
 [float] smoothing.comment = smoothing of the orders applied for both scan and track
 [float] trackingPeriod.value = 1
-[float] trackingPeriod.comment = Duration of scan cycle [s]
+[float] trackingPeriod.comment = Duration of tracking when ball_dist >= nearTrackDist [s]
+[float] vcMaxSpeed.value = 60
+[float] vcMaxSpeed.comment = Maximal angular speed with visual compass [deg/s]
+[float] visualCompassOffset.value = -20
+[float] visualCompassOffset.comment = Offset on head_pitch when using visualCompass [deg]
