--- a/chewbacca/rhio/moves/q_kick_controler/values.conf
+++ b/chewbacca/rhio/moves/q_kick_controler/values.conf
@@ -1,4 +1,4 @@
 [bool] avoidOpponents.value = 1
 [bool] avoidOpponents.comment = Avoid the opponents?
-[str] strategyFile.value = kickStrategy.json
+[str] strategyFile.value = kickStrategy_with_grass.json
 [str] strategyFile.comment = Strategy file
