--- a/olive/rhio/moves/q_kick_controler/values.conf
+++ b/olive/rhio/moves/q_kick_controler/values.conf
@@ -1,2 +1,2 @@
-[str] strategyFile.value = kickStrategy.json
+[str] strategyFile.value = kickStrategy_with_grass.json
 [str] strategyFile.comment = Strategy file
