updating olive config for json

--- a/olive/rhio/moves/learned_approach/values.conf
+++ b/olive/rhio/moves/learned_approach/values.conf
@@ -1,24 +1,12 @@
 [bool] doKick.value = 1
 [bool] doKick.comment = Start a kick when the approach is finish
-[float] kick_gain.value = 4
+[float] kick_gain.value = 1
 [float] kick_gain.comment = IncreaseRate when ball is kickable (score increases by elapsed * kick_gain)
-[float] no_kick_gain.value = 1
+[float] no_kick_gain.value = 0.25
 [float] no_kick_gain.comment = DecreaseRate when ball is not kickable (score decreases by elapsed * no_kick_gain)
 [float] warm_up_time.value = 1
 [float] warm_up_time.comment = How many seconds before kicking once walk has been disabled
-[str] classic_policy_file.value = learned_approach/classic/policy.xml
-[str] classic_policy_file.comment = 
-[str] classic_problem_file.value = learned_approach/classic/problem.xml
-[str] classic_problem_file.comment = 
-[str] lateral_policy_file.value = learned_approach/lateral/policy.xml
-[str] lateral_policy_file.comment = 
-[str] lateral_problem_file.value = learned_approach/lateral/problem.xml
-[str] lateral_problem_file.comment = 
-[str] opportunist_policy_file.value = learned_approach/opportunist/policy.xml
-[str] opportunist_policy_file.comment = 
-[str] opportunist_problem_file.value = learned_approach/opportunist/problem.xml
-[str] opportunist_problem_file.comment = 
-[str] small_policy_file.value = learned_approach/small/policy.xml
-[str] small_policy_file.comment = 
-[str] small_problem_file.value = learned_approach/small/problem.xml
-[str] small_problem_file.comment = 
+[str] policy_file.value = LearnedApproachPolicy.xml
+[str] policy_file.comment = 
+[str] problem_file.value = LearnedApproachProblem.xml
+[str] problem_file.comment = 
