--- a/arya/rhio/moves/learned_approach/values.conf
+++ b/arya/rhio/moves/learned_approach/values.conf
@@ -6,19 +6,19 @@
 [float] no_kick_gain.comment = DecreaseRate when ball is not kickable (score decreases by elapsed * no_kick_gain)
 [float] warm_up_time.value = 1
 [float] warm_up_time.comment = How many seconds before kicking once walk has been disabled
-[str] classic_policy_file.value = learned_approach/classic/policy.xml
+[str] classic_policy_file.value = learned_approach/classic/policy.json
 [str] classic_policy_file.comment = 
-[str] classic_problem_file.value = learned_approach/classic/problem.xml
+[str] classic_problem_file.value = learned_approach/classic/problem.json
 [str] classic_problem_file.comment = 
-[str] lateral_policy_file.value = learned_approach/lateral/policy.xml
+[str] lateral_policy_file.value = learned_approach/lateral/policy.json
 [str] lateral_policy_file.comment = 
-[str] lateral_problem_file.value = learned_approach/lateral/problem.xml
+[str] lateral_problem_file.value = learned_approach/lateral/problem.json
 [str] lateral_problem_file.comment = 
-[str] opportunist_policy_file.value = learned_approach/opportunist/policy.xml
+[str] opportunist_policy_file.value = learned_approach/opportunist/policy.json
 [str] opportunist_policy_file.comment = 
-[str] opportunist_problem_file.value = learned_approach/opportunist/problem.xml
+[str] opportunist_problem_file.value = learned_approach/opportunist/problem.json
 [str] opportunist_problem_file.comment = 
-[str] small_policy_file.value = learned_approach/small/policy.xml
+[str] small_policy_file.value = learned_approach/small/policy.json
 [str] small_policy_file.comment = 
-[str] small_problem_file.value = learned_approach/small/problem.xml
+[str] small_problem_file.value = learned_approach/small/problem.json
 [str] small_problem_file.comment = 
