--- a/package.xml
+++ b/package.xml
@@ -18,4 +18,7 @@
   <maintainer email="lhofer@labri.fr">Ludovic Hofer</maintainer>
 
   <license>MIT</license>
+
+  <buildtool_depend>catkin</buildtool_depend><!-- only required for run_tests command to work properly-->
+
 </package>
