--- a/package.xml
+++ b/package.xml
@@ -19,6 +19,7 @@
 
   <license>MIT</license>
 
-  <buildtool_depend>catkin</buildtool_depend><!-- only required for run_tests command to work properly-->
+  <!-- only required for run_tests command to work properly-->
+  <buildtool_depend>catkin</buildtool_depend>
 
 </package>
