--- a/tom/rhio/Localisation/Consistency/values.conf
+++ b/tom/rhio/Localisation/Consistency/values.conf
@@ -1,10 +1,12 @@
-[int] windowSize.value = 50
-[int] windowSize.comment = Maximum number of observations inside the consistency checker
-[float] minGoalQ.value = 0.8
-[float] minGoalQ.comment = Min goal quality to consider that filter has converged (for consistency)
+[bool] enabled.value = 0
+[bool] enabled.comment = Is consistency check enabled? (If disable, consistencyScore is not updated)
+[float] badObsCost.value = 0.05
+[float] badObsCost.comment = The reduction of consistencyScore for each bad observation
+[float] goodObsGain.value = 0.08
+[float] goodObsGain.comment = The increase of consistencyScore for each 'good' observation
+[float] maxNoise.value = 3
+[float] maxNoise.comment = Noise factor at 0 consistencyScore
 [float] resetInterval.value = 90
-[float] resetInterval.comment = Minimal time since any reset to allow a consistency based reset [s]
-[float] threshold.value = 0.5
-[float] threshold.comment = Minimal consistency quality
-[float] windowTime.value = 15
-[float] windowTime.comment = The maximal time an observation might be stored in consistency checker [s]
+[float] resetInterval.comment = The minimal time to wait between two consistency resets [s]
+[float] stepCost.value = 0.005
+[float] stepCost.comment = The reduction of consistencyScore at each step
