Fixing a typo in ballStack conf

--- a/tom/rhio/ballStack/values.conf
+++ b/tom/rhio/ballStack/values.conf
@@ -10,8 +10,8 @@
 [float] farBall.comment = Distance where the ball is considered far
 [float] initialScore.value = 0.2
 [float] initialScore.comment = Score of a new item in the ball stack
-[float] matchAnglle.value = 5
-[float] matchAnglle.comment = Angle at which we match balls [deg]
+[float] matchAngle.value = 5
+[float] matchAngle.comment = Angle at which we match balls [deg]
 [float] matchDistance.value = 0.4
 [float] matchDistance.comment = Radius to match the same ball
 [float] maximumScore.value = 1
