--- a/olive/rhio/moves/walk/values.conf
+++ b/olive/rhio/moves/walk/values.conf
@@ -13,7 +13,7 @@
 [float] compensateRoll.value = -3.6
 [float] compensateRoll.comment = 
 [float] cooldown.value = 1
-[float] cooldown.comment = Cooldown duration
+[float] cooldown.comment = Cooldown duration [s]
 [float] elbowOffset.value = -175
 [float] elbowOffset.comment = 
 [float] footApexPhase.value = 0.5
@@ -24,11 +24,11 @@
 [float] footOvershootRatio.comment = 
 [float] footYOffset.value = 0.025
 [float] footYOffset.comment = Front Y offset
-[float] freq.value = 1.5
+[float] freq.value = 1.4
 [float] freq.comment = Walk frequency
 [float] lateralTrim.value = 0
 [float] lateralTrim.comment = 
-[float] riseGain.value = 0.03
+[float] riseGain.value = 0.04
 [float] riseGain.comment = Rise gain
 [float] securityPhase.value = 0.6
 [float] securityPhase.comment = 
@@ -48,13 +48,13 @@
 [float] stepTrim.comment = 
 [float] supportPhaseRatio.value = 0
 [float] supportPhaseRatio.comment = Support phase ratio
-[float] swingGain.value = 0.03
+[float] swingGain.value = 0.04
 [float] swingGain.comment = Swing gain
 [float] swingPause.value = 0
 [float] swingPause.comment = Swing pause
 [float] swingPhase.value = 0.6
 [float] swingPhase.comment = Swing phase
-[float] trunkPitch_backward.value = 14
+[float] trunkPitch_backward.value = 12
 [float] trunkPitch_backward.comment = Trunk Pitch
 [float] trunkPitch_forward.value = 12
 [float] trunkPitch_forward.comment = Trunk Pitch
@@ -69,4 +69,4 @@
 [float] turnTrim.value = 0
 [float] turnTrim.comment = 
 [float] warmup.value = 1
-[float] warmup.comment = Warmup
+[float] warmup.comment = Warmup [s]
