--- a/arya/rhio/moves/walk/values.conf
+++ b/arya/rhio/moves/walk/values.conf
@@ -13,7 +13,7 @@
 [float] compensateRoll.value = -3.6
 [float] compensateRoll.comment = 
 [float] cooldown.value = 1
-[float] cooldown.comment = Cooldown duration
+[float] cooldown.comment = Cooldown duration [s]
 [float] elbowOffset.value = -170
 [float] elbowOffset.comment = 
 [float] footApexPhase.value = 0.5
@@ -69,4 +69,4 @@
 [float] turnTrim.value = 0
 [float] turnTrim.comment = 
 [float] warmup.value = 1
-[float] warmup.comment = Warmup
+[float] warmup.comment = Warmup [s]
